2015-01-27  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56273
	PR tree-optimization/59124
	PR tree-optimization/64277
	* tree-vrp.c (vrp_finalize): Emit array-bound warnings only
	from the first VRP pass.

2015-01-27  Jakub Jelinek  <jakub@redhat.com>

	PR ipa/64776
	* cgraphunit.c (cgraph_node::expand_thunk): If not this_adjusting,
	handle the first argument in the same loop as all the other arguments.

	PR rtl-optimization/61058
	* jump.c (cleanup_barriers): Update basic block boundaries
	if BLOCK_FOR_INSN is non-NULL on PREV.

2015-01-27  Ilya Enkovich  <ilya.enkovich@intel.com>

	* tree-chkp.c (chkp_call_returns_bounds_p): Fix handling of
	bounds narrowing, already instrumented calls and calls to
	not instrumentable functions.

2015-01-27  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/64807
	* wide-int.cc (wi::divmod_internal): Clear
	b_dividend[dividend_blocks_needed].

2015-01-26  DJ Delorie  <dj@redhat.com>

	* config/rl78/rl78.c (move_elim_pass): Don't optimize away
	volatile memory references.

2015-01-26  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/49263
	* config/sh/sh.c (sh_split_treg_set_expr): Invoke emit_insn before
	remove_insn.
	* config/sh/sh.md (tstsi_t): Don't try to optimize constant with right
	shifts if it already fits into K08.

2015-01-26  Jakub Jelinek  <jakub@redhat.com>

	PR ipa/64730
	* ipa-inline.c (inline_small_functions): Print "unknown" even
	if edge->call_stmt is non-NULL, but has builtins or unknown
	location.

	PR middle-end/64421
	* omp-low.c (simd_clone_mangle): If DECL_ASSEMBLER_NAME starts
	with asterisk, skip the first character.

2015-01-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/64806
	* config/i386/i386 (feature_priority): Revert the last P_POPCNT
	order change.

2015-01-26  Uros Bizjak  <ubizjak@gmail.com>

        PR target/64795
	* config/i386/i386.md (*movdi_internal): Also check operand 0
	to determine TYPE_LEA operand.
	(*movsi_internal): Ditto.
